--- a/views/imagenes.ejs
+++ b/views/imagenes.ejs
@@ -27,7 +27,7 @@
                         <% if (imagenes) { %>
                             <tr>
                                 <td><%= (i + 1) %></td>
-                                <td><img src="<%= imagenes[i].url %>"></td>
+                                <td><img src="<%= imagenes[i].url %>" width="200px" height="200px"></td>
                                 <td><%= imagenes[i].destacado %></td>
                                 <td> 
                                     <div class="input-group">
