--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -33,7 +33,7 @@
                                 <td><%= (i + 1) %></td>
                                 <td><%= productos[i].codigo %></td>
                                 <td><%= productos[i].nombre %></td>
-                                <td><%= productos[i].precio %></td>
+                                <td><%= productos[i].precio %>$</td>
                                 <td><%= productos[i].marca %></td>
                                 <td><%= productos[i].deporte %></td>
                                 <td><%= productos[i].descripcion %></td>
