--- a/public/stylesheets/aggimg.css
+++ b/public/stylesheets/aggimg.css
@@ -58,3 +58,24 @@ select option {
 h1{
   text-align: center;
 }
+/* Estilos para pantallas grandes (PC) */
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+/* Estilos para pantallas medianas (Tablets) */
+@media screen and (max-width: 768px) {
+  .container {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Estilos para pantallas pequeñas (Teléfonos) */
+@media screen and (max-width: 480px) {
+  .container {
+      grid-template-columns: 1fr;
+  }
+}
