--- a/public/stylesheets/aggprd.css
+++ b/public/stylesheets/aggprd.css
@@ -1,62 +1,83 @@
 body{
-    background-color: #d1d1d1;
+  background-color: #d1d1d1;
 }
 
 
 form {
-    width: 500px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #a0a0a0;
-  }
-  
-  input, textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #a0a0a0;
-  }
-  
-  input[type="text"], input[type="number"], input[type="email"], input[type="password"] {
-    height: 30px;
-  }
-  
-  textarea {
-    height: 100px;
-  }
-  
-  select {
-    width: 100%;
-    height: 30px;
-  }
-  
-  button {
-    width: 100%;
-    height: 40px;
-    background-color: #000;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-  }
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #a0a0a0;
+}
 
-  #nombre, #codigo, #precio, #marca, #deporte {
-    margin-bottom: 10px;
-  }
-  
-  #categoria {
-    margin-bottom: 20px;
-  }
-  
-  #descripcion {
-    margin-bottom: 20px;
-  }
-  
-  
-  .btn-primary {
-    background-color: #000000;
-    color: white;
-    margin: auto;
-  }  
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a0a0a0;
+}
 
-  h1,h4 {
-    text-align: center;
-  }
+input[type="text"], input[type="number"], input[type="email"], input[type="password"] {
+  height: 30px;
+}
+
+textarea {
+  height: 100px;
+}
+
+select {
+  width: 100%;
+  height: 30px;
+}
+
+button {
+  width: 100%;
+  height: 40px;
+  background-color: #000;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#nombre, #codigo, #precio, #marca, #deporte {
+  margin-bottom: 10px;
+}
+
+#categoria {
+  margin-bottom: 20px;
+}
+
+#descripcion {
+  margin-bottom: 20px;
+}
+
+
+.btn-primary {
+  background-color: #000000;
+  color: white;
+  margin: auto;
+}  
+
+h1,h4 {
+  text-align: center;
+}
+/* Estilos para pantallas grandes (PC) */
+.container {
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+grid-gap: 20px;
+padding: 20px;
+}
+
+/* Estilos para pantallas medianas (Tablets) */
+@media screen and (max-width: 768px) {
+.container {
+    grid-template-columns: repeat(2, 1fr);
+}
+}
+
+/* Estilos para pantallas pequeñas (Teléfonos) */
+@media screen and (max-width: 480px) {
+.container {
+    grid-template-columns: 1fr;
+}
+}
