--- a/public/stylesheets/producto.css
+++ b/public/stylesheets/producto.css
@@ -118,3 +118,25 @@ a {
   display: inline-block;
   margin-left: 10px;
 }
+
+/* Estilos para pantallas grandes (PC) */
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+/* Estilos para pantallas medianas (Tablets) */
+@media screen and (max-width: 768px) {
+  .container {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Estilos para pantallas pequeñas (Teléfonos) */
+@media screen and (max-width: 480px) {
+  .container {
+      grid-template-columns: 1fr;
+  }
+}
