--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -11,7 +11,7 @@
     <a href="/home">Home</a>
     <a href="/categorias">Categorias</a>
     <a href="/productos">Productos</a>
-    <a href="//imagenes">Imagenes</a>
+    <a href="/imagenes">Imagenes</a>
     <a href="/Clientes">Clientes</a>
     <a href="/transacciones">Transacciones</a>
     <div>
