--- a/views/imagenes.ejs
+++ b/views/imagenes.ejs
@@ -12,6 +12,8 @@
     <a href="/categorias">Categorias</a>
     <a href="/productos">Productos</a>
     <a href="/imagenes">Imagenes</a>
+    <a href="/Clientes">Clientes</a>
+    <a href="/transacciones">Transacciones</a>
     <div>
         <table border="1">
             <caption>Imagenes</caption>
