--- a/views/catalogo.ejs
+++ b/views/catalogo.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1Q2Y72JQD"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-37RN5B06VW"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
-      gtag('config', 'G-Z1Q2Y72JQD');
+      gtag('config', 'G-37RN5B06VW');
     </script>
     <title>Catalogo de Productos</title>
     <link rel="stylesheet" href="/stylesheets/catalogo.css">
