--- a/views/detalles.ejs
+++ b/views/detalles.ejs
@@ -7,13 +7,13 @@
     <meta property="og:description" content="<%= productos.descripcion %>">
     <meta property="og:image" content="<%= productos.url %>">
     <meta property="og:type" content="website">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1Q2Y72JQD"></script>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-37RN5B06VW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Z1Q2Y72JQD');
+  gtag('config', 'G-37RN5B06VW');
 </script>
     <title>Detalles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
