--- a/views/recuperar.ejs
+++ b/views/recuperar.ejs
@@ -30,7 +30,7 @@ text-decoration: none;
           </tr> 
           <tr>
         </table>
-        <input class="botons" type="submit" value="Registrarse">
+        <input class="botons" type="submit" value="Recuperar">
     </form>
   </div>
     <footer>
